Bug 107966 - OPENGL: Format Cells/Borders/Line Styles - not drawn
Summary: OPENGL: Format Cells/Borders/Line Styles - not drawn
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
: 118490 118939 118986 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2017-05-20 04:04 UTC by Kevin
Modified: 2019-04-12 17:23 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
OpenGL log file (315 bytes, text/plain)
2019-01-25 10:53 UTC, Marina Latini (SUSE)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin 2017-05-20 04:04:23 UTC
Description:
The dropdown doesn't show the various styles of lines.

Steps to Reproduce:
1. Go the the Format Cells dialog
2. Go to the Borders tab
3. Click on the dropdown for Line Styles

Actual Results:  
All the choices are blank (you can select them one by one to see what they are)

Expected Results:
It should draw correctly. (Note: The drawing in general for 5.3.2.2 is poor compared to 5.2 - certain dialogs are drawn at poor resolution. Dialogs also draw much more slowly - the Format Cells dialog takes almost a minute on the first time you use it after launching - maybe it hasn't cached the fonts?)


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36
Comment 1 m_a_riosv 2017-05-20 11:34:22 UTC
Seems it is an OpenGL with it enable shows the issue.
Version: 5.3.3.2 (x64)
Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; Layout Engine: new; 
Locale: es-ES (es_ES); Calc: group
Versión: 5.4.0.0.alpha1 (x64)
Id. de compilación: 0b9f9bef65bb21ebb6a64aafad448f7f62dc824a
Subproc. CPU: 4; SO: Windows 6.19; Repres. IU: GL; 
Configuración regional: es-ES (es_ES); Calc: CL
Version: 5.5.0.0.alpha0+
Build ID: 7662b11cad6105d56fb9acc9c431c89d3b68dc89
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-05-20_10:09:09
Locale: es-ES (es_ES); Calc: CL

Working with OpenGL enable on:
Version: 5.2.7.1
Build ID: bf0fa7b86c7c0592941ede29fca6fafff642a948
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
Locale: es-ES (es_ES); Calc: group
Comment 2 tomaskeb 2017-06-19 03:57:49 UTC
It behaves the same in Writer (Paragraph, Character dialog).
Comment 3 Telesto 2017-11-15 19:49:00 UTC
No repro with:
Version: 6.0.0.0.alpha1+
Build ID: b3f1d199a72ce87cb65ddaeac922564f57da6a4d
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-11-06_00:10:53
Locale: nl-NL (nl_NL); Calc: CL
Comment 4 Buovjaga 2017-11-16 14:15:16 UTC Comment hidden (obsolete)
Comment 5 Aron Budea 2018-01-15 01:12:04 UTC
I can see the entries in LO 6.0.0.1 with OpenGL enabled / Windows 7.
Let's close this as WFM. Kevin, if the issue still occurs for you, please reopen this bug report.
Comment 6 Aron Budea 2018-07-02 03:48:04 UTC
*** Bug 118490 has been marked as a duplicate of this bug. ***
Comment 7 Aron Budea 2018-07-02 03:50:30 UTC
Apparently I was wrong in comment 5, this bug is only there with some GPUs, but not with others. No issue with an AMD RX 570, but the bug can be seen with an Intel HD 4000 IGP.
Comment 8 Aron Budea 2018-07-26 12:34:23 UTC
*** Bug 118939 has been marked as a duplicate of this bug. ***
Comment 9 Aron Budea 2018-07-28 00:55:42 UTC
Bibisected to the following commit using repo bibisect-win32-5.3 on an Intel HD4000 IGP. Adding Cc: to Tomaz Vajngerl.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2003076c4318511a3d621558d3b44b4e8e6c6529
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2016-05-29 15:36:39 +0900
committer	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2016-06-08 11:39:22 +0900

opengl: batch draw polypolygons
Comment 10 Aron Budea 2018-08-08 03:24:33 UTC
*** Bug 118986 has been marked as a duplicate of this bug. ***
Comment 11 Aron Budea 2018-08-08 03:26:04 UTC
Screenshots from the duplicate bug reports:
attachment 143257 [details]
attachment 143814 [details]
Comment 12 Marina Latini (SUSE) 2019-01-25 10:51:17 UTC
Repro with:

Version: 6.2.0.2 (x64)
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-GB
Calc: threaded
Comment 13 Marina Latini (SUSE) 2019-01-25 10:53:44 UTC
Created attachment 148624 [details]
OpenGL log file
Comment 14 Marina Latini (SUSE) 2019-01-25 10:56:31 UTC
Intel(R) HD Graphics 630
23.20.16.4973

And 

NVIDIA Quadro M1200
398.27
Comment 15 Miklos Vajna 2019-03-27 11:30:00 UTC
I'll take a look at this, let's see if I get anywhere.
Comment 16 Commit Notification 2019-03-29 14:22:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/75e152a7e8f384921d4417d0fb5d2db6a6f357cb%5E%21

tdf#107966 vcl opengl: fix not drawn 1px wide polypolygons

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2019-04-01 13:20:15 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/777a26b1802f92e26afdd147f76022ef345a393e%5E%21

tdf#107966 vcl opengl: fix not drawn 1px wide polypolygons

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Roman Kuznetsov 2019-04-12 17:23:13 UTC
verified in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 74288f5af28de3d14044c951e7e5d62bb2e22301
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-12_00:11:21
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

I have Intel HD 630 in Windows 10